--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
-    "angular-scenario": ">=1.2.*"
+    "angular-scenario": ">=1.2.*",
+    "angular-dragdrop": "~1.0.11"
   }
 }
