--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
+    "jquery-ui": "~",
     "bootstrap-sass-official": "~3.1.1",
     "bootstrap": "~3.1.1",
     "angular-resource": ">=1.2.*",
@@ -14,11 +15,11 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.10"
+    "angular-ui-router": "~0.2.10",
+    "angular-dragdrop": "~1.0.11"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
-    "angular-scenario": ">=1.2.*",
-    "angular-dragdrop": "~1.0.11"
+    "angular-scenario": ">=1.2.*"
   }
 }
