--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
-    "jquery-ui": "~",
     "bootstrap-sass-official": "~3.1.1",
     "bootstrap": "~3.1.1",
     "angular-resource": ">=1.2.*",
@@ -16,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "angular-dragdrop": "~1.0.11"
+    "angular-dragdrop": "~1.0.11",
+    "jquery-ui": "~1.11.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
