--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
     "angular-dragdrop": "~1.0.11",
-    "jquery-ui": "~1.11.4"
+    "jquery-ui": "~1.11.4",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
