--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "karma-requirejs": "~0.2.1",
     "karma-script-launcher": "~0.1.0",
     "open": "~0.0.4",
+    "request": "^2.55.0",
     "requirejs": "~2.1.11",
     "should": "~3.3.1",
     "supertest": "~0.11.0",
